# monobench

./: .gitignore  CANDIDATES.md  Cargo.toml  README.md  SPEC.md  backlog.tsv  build.rs  openclis.json
.github/workflows/: release.yml
harness/: gen-instances.sh  run.sh
harness/prompts/: depth.md
harness/runners/: niia.sh
initiate/: SKILL.md  initiate.md
instances/_TEMPLATE/: ground_truth.md  instance.json  symptom.md
instances/bun-1.3.10-toThreadSafe/: symptom.md
instances/bun-20093-napi-handlescope-race/: ground_truth.md  instance.json  symptom.md
instances/bun-27838-sslconfig-race/: ground_truth.md  instance.json  symptom.md
instances/bun-28907-threadpool-wakeup/: ground_truth.md  instance.json  symptom.md
instances/bun-29829-onhandshake-uaf/: ground_truth.md  instance.json  symptom.md
instances/bun-29951-directorywatch-uaf/: ground_truth.md  instance.json  symptom.md
instances/bun-30185-getheapsnapshot-race/: ground_truth.md  instance.json  symptom.md
instances/bun-30196-htmlrewriter-uaf/: ground_truth.md  instance.json  symptom.md
instances/cpython-142851-json-reentrant/: ground_truth.md  instance.json  symptom.md
instances/cpython-148852-rawmutex-wakeup/: symptom.md  (+2 more)
research/: AGENTS.md  CLAUDE.md  GROK-CLI-SUPPORT-RESEARCH-2026-05-26.md  LANGUAGE-EXPANSION-CANDIDATES-2026-05-26.md  README.md  VERSION-AXIS-2026-05-26.md
src/: adoption.rs  evidence.rs  export.rs  grade.rs  integrity.rs  main.rs  maker_state_bridge.rs  meter.rs  monogram_audit.rs  niia_runner.rs  report.rs  review.rs  run.rs  run_meta.rs  telemetry.rs  trace.rs  util.rs
(+149 files in other folders)
