[package]
name = "monobench"
version = "0.1.36"
edition = "2021"
description = "Code-intelligence-tool benchmark — does giving an AI agent a tool (monogram/codegraph) help it find a real bug's root cause vs a baseline told to dig equally hard?"

[[bin]]
name = "monobench"
path = "src/main.rs"

[dependencies]
serde_json = "1"
lib-niia-core = { path = "../../../tauri-apps/lib-niia-core" }

[profile.release]
opt-level = 2
strip = true
